Run UpgradeToJava17 recipe